--- a/rf-decode.html
+++ b/rf-decode.html
@@ -7,7 +7,7 @@
         },
         inputs:1,
         outputs:1,
-        icon: "im.png",
+        icon: "bridge.png",
         label: function() {
             return this.name||"rf-decode";
         }
